force-app/main/default/objects/Project__c/fields/FinalAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount__c</fullName>
    <label>FinalAmount</label>
    <summarizedField>ProjectLineItem__c.AmountPerRole__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.ProjectAssigned__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>