force-app/main/default/objects/Project__c/fields/IsPM__c.field-meta.xml
<CustomField>
    <fullName>IsPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPM</label>
    <type>Checkbox</type>
</CustomField>