force-app/main/default/objects/Project__c/fields/ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>ProjectManager__c</fullName>
    <label>ProjectManager</label>
    <length>30</length>
    <type>Text</type>
</CustomField>