force-app/main/default/objects/Project__c/fields/QuantityHours__c.field-meta.xml
<CustomField>
    <fullName>QuantityHours__c</fullName>
    <label>QuantityHours</label>
    <summarizedField>ProjectLineItem__c.QuantityHours__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.ProjectAssigned__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>