force-app/main/default/objects/Project__c/fields/SoldRoles__c.field-meta.xml
<CustomField>
    <fullName>SoldRoles__c</fullName>
    <label>SoldRoles</label>
    <summaryForeignKey>ProjectLineItem__c.ProjectAssigned__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>