force-app/main/default/objects/Project__c/fields/SquadLead__c.field-meta.xml
<CustomField>
    <fullName>SquadLead__c</fullName>
    <label>SquadLead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>