force-app/main/default/objects/Project__c/fields/TeamProgress__c.field-meta.xml
<CustomField>
    <fullName>TeamProgress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamProgress</label>
    <referenceTo>TeamProgress__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>