force-app/main/default/objects/Project__c/fields/totalHoursPendingToAssign__c.field-meta.xml
<CustomField>
    <fullName>totalHoursPendingToAssign__c</fullName>
    <label>totalHoursPendingToAssign</label>
    <summarizedField>ProjectLineItem__c.HoursPendingToAssign__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.ProjectAssigned__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>