force-app/main/default/objects/Project__c/validationRules/CanNotModifyStatusInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotModifyStatusInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c),&apos;In Progress&apos;) &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Completed&apos;) )</errorConditionFormula>
    <errorMessage>You can not modify a project In Progress stage</errorMessage>
</ValidationRule>