force-app/main/default/objects/Project__c/validationRules/CanNotPassToInprogress.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotPassToInprogress</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c ,&apos;In Progress&apos;) &amp;&amp; ( ISBLANK( SquadLead__c ) ||  FinalAmount__c  &gt;  OppId__r.Amount  ||  TotalHoursPendingToAssing__c  &gt; 0)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&apos;t pass the project into IN PROGRESS because there some desaproved requirements like -There is no Squad Lead Assigned to the project. -There some hours without assign Or the project has losses.</errorMessage>
</ValidationRule>