force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FinalAmount__c</columns>
    <columns>Client__c</columns>
    <columns>Status__c</columns>
    <columns>QuantityHours__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>