force-app/main/default/objects/Project__c/listViews/myProject.listView-meta.xml
<ListView>
    <fullName>myProject</fullName>
    <columns>NAME</columns>
    <columns>ProjectManager__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>myProject</label>
</ListView>